--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   api:
     build: .
     container_name: gravacoes_api
-    working_dir: /app
+    working_dir: ./
     env_file:
       - stack.env
     ports:
