--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ services:
   api:
     build: .
     container_name: gravacoes_api
-    working_dir: ./
+    working_dir: /
     env_file:
       - stack.env
     ports:
