--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@aws-sdk/client-cloudwatch": "^3.716.0",
     "@aws-sdk/client-s3": "^3.717.0",
     "@aws-sdk/client-sqs": "^3.716.0",
+    "@aws-sdk/s3-request-presigner": "^3.717.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.2.0",
